--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <div id="main">
         <h1>welcome to boli.dev</h1>
         <h2>it's wonderful here</h2>
-        <h1>hello there mason siragusa!</h1>
+        <h2>look at my navbar!</h2>
+    </div>
+
+    <div id="footer">
+        ©2020 Trevor Bollinger
     </div>
 
 </body>
