--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <title>Hello!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="https://trevorbollinger.github.io/style.css"
+    <!--<link rel="stylesheet" type="text/css" href="https://trevorbollinger.github.io/style.css">-->
 </head>
 <body>
-    <div id="nav">
+    <div id="nav" class="standard">
         <h3>Home</h3>
     </div>
 
-    <div id="main">
+    <div id="main" class="standard">
         <h1>welcome to boli.dev</h1>
         <h2>it's wonderful here</h2>
         <h2>look at my navbar!</h2>
     </div>
 
-    <div id="footer">
+    <div id="footer" class="standard">
         ©2020 Trevor Bollinger
     </div>
 
