--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello!</title>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <!--<link rel="stylesheet" type="text/css" href="https://trevorbollinger.github.io/style.css">-->
+
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/falling%20game/sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/falling%20game/player.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/falling%20game/enemy.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/falling%20game/button.js"></script>
 </head>
 <body>
     <div id="nav" class="standard">
@@ -13,12 +20,13 @@
 
     <div id="main" class="standard">
         <h1>welcome to boli.dev</h1>
-        <h2>it's wonderful here</h2>
-        <h2>look at my navbar!</h2>
+        <h2>play my hit game: "Falling Game!"</h2>
+        <div id="falling-game"></div>
+        <br>
     </div>
 
     <div id="footer" class="standard">
-        ©2020 Trevor Bollinger
+        <p>©2020 Trevor Bollinger</p>
     </div>
 
 </body>
