visual overhal + contact

--- a/game.html
+++ b/game.html
@@ -28,39 +28,39 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <nav class="navbar navbar-light bg-light">
-                <a class="navbar-brand" href="index.html">
-                    <img src="resources/logo.png" width="28" height="28" alt="">
-                </a>
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="game.html">Falling Game</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </nav> <br>
-
-    <!-- body -->
-    <div id="main" class="standard">
-        <h1>welcome to boli.dev!</h1><br>
-        <h3>play my hit game: "Falling Game!"</h3>
-        <h3>use the navbar above to get there</h3>
-        <br>
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">
+                <img src="resources/logo.png" width="28" height="28" alt="">
+            </a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="game.html">Falling Game</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </div>
+</nav> <br>
 
-    <!-- footer -->
-    <br><div id="footer" class="standard">
-        <p>©2020 Trevor Bollinger</p>
-    </div>
+<!-- body -->
+<div id="main" class="standard">
+    <h1>welcome to boli.dev!</h1><br>
+    <h2>play my hit game: "Falling Game!"</h2>
+    <div id="falling-game"></div>
+    <br>
+</div>
+
+<!-- footer -->
+<br><div id="footer" class="standard">
+    <p>©2020 Trevor Bollinger</p>
+</div>
 </body>
 </html>
