dark mode + bugfix

--- a/game.html
+++ b/game.html
@@ -29,9 +29,9 @@
 </head>
 <body>
 <!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-darkt">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">
                 <img src="resources/logo.png" width="28" height="28" alt="">
             </a>
@@ -52,10 +52,17 @@
 
 <!-- body -->
 <div id="main" class="standard">
-    <h1>welcome to boli.dev!</h1><br>
-    <h2>play my hit game: "Falling Game!"</h2>
-    <div id="falling-game"></div>
-    <br>
+
+    <div id= "greeting">
+        <div class = "center">
+            <h1 class="body-text">welcome to boli.dev!</h1><br>
+            <h2 class="body-text">play my hit game: "Falling Game!"</h2>
+        </div>
+    </div>
+
+    <div id="game-container">
+        <div id="falling-game"></div>
+    </div>
 </div>
 
 <!-- footer -->
