--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-darkt">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <nav class="navbar navbar-light bg-light">
+            <nav class="navbar navbar-dark bg-dark">
                 <a class="navbar-brand" href="index.html">
                     <img src="resources/logo.png" width="28" height="28" alt="">
                 </a>
