--- a/stinktown-web/stinktown.html
+++ b/stinktown-web/stinktown.html
@@ -8,6 +8,7 @@
     <script src="button.js"></script>
     <script src="person.js"></script>
     <script src="physics.js"></script>
+    <script src="p5-sound.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
   <style> body {padding: 0; margin: 0;} </style>
   </head>
