--- a/game.html
+++ b/game.html
@@ -12,10 +12,10 @@
 
     <!-- Falling Game & p5.js -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/sketch.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/player.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/enemy.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/button.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/fallinggame/sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/fallinggame/player.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/fallinggame/enemy.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/fallinggame/button.js"></script>
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4df945e3ae.js" crossorigin="anonymous"></script>
@@ -29,26 +29,29 @@
 </head>
 <body>
 <!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-darkt">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">
-                <img src="resources/logo.png" width="28" height="28" alt="">
-            </a>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="game.html">Falling Game</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</nav> <br>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-darkt">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <nav class="navbar navbar-dark bg-dark">
+                <a class="navbar-brand" href="index.html">
+                    <img src="resources/logo.png" width="28" height="28" alt="">
+                </a>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="game.html">Falling Game</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="map.html">Minecraft Dynmap</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </nav> <br>
 
 <!-- body -->
 <div id="main" class="standard">
