--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
     <!-- Falling Game & p5.js -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/sketch.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/player.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/enemy.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/button.js"></script>
+
+    <script language="javascript" type="text/javascript" src="resources/fallinggame/sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/fallinggame/player.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/fallinggame/enemy.js"></script>
+    <script language="javascript" type="text/javascript" src="resources/fallinggame/button.js"></script>
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4df945e3ae.js" crossorigin="anonymous"></script>
@@ -44,6 +45,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="map.html">Minecraft Dynmap</a>
                     </li>
                 </ul>
             </nav>
