--- a/map.html
+++ b/map.html
@@ -10,8 +10,18 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
+    <script type="text/javascript">
+        msound = loadSound('resources/sounds/sound.mp3');
+
+        function playSound(){
+            msound.play();
+        }
+
+    </script>
+
     <!-- Falling Game & p5.js -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
+    <script src="resources/p5-sound.js"></script>
     <script language="javascript" type="text/javascript" src="resources/falling%20game/sketch.js"></script>
     <script language="javascript" type="text/javascript" src="resources/falling%20game/player.js"></script>
     <script language="javascript" type="text/javascript" src="resources/falling%20game/enemy.js"></script>
@@ -42,22 +52,21 @@
                     <li class="nav-item">
                         <a class="nav-link" href="game.html">Falling Game</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="map.html">Minecraft Dynmap</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </nav> <br>
+
 <!-- body -->
 <div id="main" class="standard">
-    <h1>welcome to boli.dev!</h1><br>
-    <h3>This page is only here because I wanted more than two items in my navbar, but if you'd like to contact me, please do.</h3>
-    <h3>Contact me at bollingertrevor@gmail.com</h3>
-    <h3>Send me pictures of dogs.</h3>
+    <iframe src="http://68.13.144.69:8123" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
+    <input type = "button" onclick = "playSound()" value = "ee">  
 </div>
 
 <!-- footer -->
