--- a/map.html
+++ b/map.html
@@ -38,35 +38,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-darkt">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <nav class="navbar navbar-dark bg-dark">
-                <a class="navbar-brand" href="index.html">
-                    <img src="resources/logo.png" width="28" height="28" alt="">
-                </a>
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="game.html">Falling Game</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="map.html">Minecraft Dynmap</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </nav> <br>
 
 <!-- body -->
 <div id="main" class="standard">
-    <iframe src="http://68.13.144.69:8123" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
-    <input type = "button" onclick = "playSound()" value = "ee">  
+    <iframe src="http://68.13.148.27:8123/?worldname=world&mapname=flat/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
+    <iframe src="http://68.13.148.27:8804/server/Server%201#tab-performance/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
 </div>
 
 <!-- footer -->
