--- a/stinktown-web/stinktown.html
+++ b/stinktown-web/stinktown.html
@@ -4,6 +4,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.10/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.10/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.10/addons/p5.sound.min.js"></script>
+    <script src="setup.js"></script>
     <script src="sketch.js"></script>
     <script src="button.js"></script>
     <script src="person.js"></script>
