--- a/map.html
+++ b/map.html
@@ -41,8 +41,8 @@
 
 <!-- body -->
 <div id="main" class="standard">
-    <iframe src="http://68.13.148.27:8123/?worldname=world&mapname=flat/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
-    <iframe src="http://68.13.148.27:8804/server/Server%201#tab-performance/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
+    <iframe src="http://68.13.92.132:8123/?worldname=world&mapname=flat&zoom=1&x=154&y=64&z=207" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
+    <iframe src="http://68.13.92.132:8804/server/Server%201#tab-performance/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
 </div>
 
 <!-- footer -->
