--- a/falling-game/index.html
+++ b/falling-game/index.html
@@ -11,11 +11,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
     <!-- Falling Game & p5.js -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/fallinggame/sketch.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/fallinggame/player.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/fallinggame/enemy.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/fallinggame/button.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.10/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.10/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.10/addons/p5.sound.min.js"></script>
+    <script language="javascript" type="text/javascript" src="sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="player.js"></script>
+    <script language="javascript" type="text/javascript" src="enemy.js"></script>
+    <script language="javascript" type="text/javascript" src="button.js"></script>
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4df945e3ae.js" crossorigin="anonymous"></script>
