--- a/map.html
+++ b/map.html
@@ -10,22 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-    <script type="text/javascript">
-        msound = loadSound('resources/sounds/sound.mp3');
-
-        function playSound(){
-            msound.play();
-        }
-
-    </script>
-
     <!-- Falling Game & p5.js -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
-    <script src="resources/p5-sound.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/sketch.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/player.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/enemy.js"></script>
-    <script language="javascript" type="text/javascript" src="resources/falling%20game/button.js"></script>
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4df945e3ae.js" crossorigin="anonymous"></script>
@@ -41,8 +27,8 @@
 
 <!-- body -->
 <div id="main" class="standard">
-    <iframe src="http://68.13.148.27:8123/?worldname=world&mapname=flat/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
-    <iframe src="http://68.13.148.27:8804/server/Server%201#tab-performance/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
+    <iframe src="http://68.13.92.132:8123/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
+    <iframe src="http://68.13.92.132:8804/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
 </div>
 
 <!-- footer -->
