--- a/map.html
+++ b/map.html
@@ -10,19 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-<<<<<<< HEAD
+
     <!-- Falling Game & p5.js -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
-=======
-    <script type="text/javascript">
-        msound = loadSound('resources/sounds/sound.mp3');
 
-        function playSound(){
-            msound.play();
-        }
-
-    </script>
->>>>>>> 2a1068a011a4ea51d5c126f9244918bf56b788d2
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4df945e3ae.js" crossorigin="anonymous"></script>
@@ -38,13 +29,13 @@
 
 <!-- body -->
 <div id="main" class="standard">
-<<<<<<< HEAD
+
     <iframe src="http://68.13.92.132:8123/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
     <iframe src="http://68.13.92.132:8804/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
 =======
-    <iframe src="http://68.13.92.132:8123/?worldname=world&mapname=flat&zoom=1&x=154&y=64&z=207" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
-    <iframe src="http://68.13.92.132:8804/server/Server%201#tab-performance/" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
->>>>>>> 2a1068a011a4ea51d5c126f9244918bf56b788d2
+    <iframe src="http://68.13.92.132:8123" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
+    <iframe src="http://68.13.92.132:8804" title="The Lands of Aeris" width="100%" height="1080px" frameborder="0"></iframe>
+
 </div>
 
 <!-- footer -->
