--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
     <!-- Falling Game & p5.js -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
 
-<<<<<<< HEAD
-=======
-
->>>>>>> 2a1068a011a4ea51d5c126f9244918bf56b788d2
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4df945e3ae.js" crossorigin="anonymous"></script>
 
@@ -33,14 +29,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <nav class="navbar navbar-dark bg-dark">
                 <a class="navbar-brand" href="index.html">
-                    <img src="resources/logo.png" width="28" height="28" alt="">
+                    <img src="logo.png" width="28" height="28" alt="">
                 </a>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="game.html">Falling Game</a>
+                        <a class="nav-link" href="falling-game/index.html">Falling Game</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
