--- a/map.html
+++ b/map.html
@@ -26,7 +26,29 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-darkt">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <nav class="navbar navbar-dark bg-dark">
+                <a class="navbar-brand" href="index.html">
+                    <img src="logo.png" width="28" height="28" alt="">
+                </a>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="falling-game/index.html">Falling Game</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="map.html">Minecraft Dynmap</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </nav> <br>
 <!-- body -->
 <div id="main" class="standard">
 
