--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-<<<<<<< HEAD
     <!-- Falling Game & p5.js -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
-=======
->>>>>>> 2a1068a011a4ea51d5c126f9244918bf56b788d2
+
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4df945e3ae.js" crossorigin="anonymous"></script>
@@ -32,14 +30,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <nav class="navbar navbar-dark bg-dark">
                 <a class="navbar-brand" href="index.html">
-                    <img src="resources/logo.png" width="28" height="28" alt="">
+                    <img src="logo.png" width="28" height="28" alt="">
                 </a>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="game.html">Falling Game</a>
+                        <a class="nav-link" href="falling-game/index.html">Falling Game</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="contact.html">Contact</a>
