--- a/falling-game/index.html
+++ b/falling-game/index.html
@@ -39,16 +39,16 @@
                 </a>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="trevorbollinger.github.io/index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="boli.dev/index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="trevorbollinger.github.io/falling-game/index.html">Falling Game</a>
+                        <a class="nav-link" href="boli.dev/falling-game/index.html">Falling Game</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="trevorbollinger.github.io/contact.html">Contact</a>
+                        <a class="nav-link" href="boli.dev/contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="trevorbollinger.github.io/map.html">Minecraft Dynmap</a>
+                        <a class="nav-link" href="boli.dev/map.html">Minecraft Dynmap</a>
                     </li>
                 </ul>
             </nav>
