--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,8 @@
 <!-- body -->
 <div id="main" class="standard">
     <h1>welcome to boli.dev!</h1><br>
-    <h3>This page is only here because I wanted more than two items in my navbar, but if you'd like to contact me, please do.</h3>
-    <h3>Contact me at bollingertrevor@gmail.com</h3>
-    <h3>Send me pictures of dogs.</h3>
+    <h3>Hello! If you would like to reach me for any reason reguarding my app or talking about dogs, please feel free to email me at</h3>
+    <a href="mailto:trevor@boli.dev">trevor@boli.dev</a>
 </div>
 
 <!-- footer -->
