--- a/contact.html
+++ b/contact.html
@@ -53,12 +53,12 @@
 <div id="main" class="standard">
     <h1>welcome to boli.dev!</h1><br>
     <h3>Hello! If you would like to reach me for any reason reguarding my app or talking about dogs, please feel free to email me at</h3>
-    <a href="mailto:trevor@boli.dev">trevor@boli.dev</a>
+    <span style="font-size:1.2em;"><a href="mailto:trevor@boli.dev">trevor@boli.dev</a></span>
 </div>
 
 <!-- footer -->
 <br><div id="footer" class="standard">
-    <p>©2020 Trevor Bollinger</p>
+    <p>©2023 Trevor Bollinger</p>
 </div>
 </body>
 </html>
