--- a/index.html
+++ b/index.html
@@ -28,23 +28,20 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="server.html">Minecraft</a>
-                    </li>
                 </ul>
             </nav>
         </div>
-    </nav> <br>
+    </nav> <br> <!--end navbar-->
 
     <!-- body -->
     <div id="main" class="standard">
-        <h1>welcome to boli.dev!</h1><br>
+        <h1>welcome to boli.dev</h1><br>
         <br><br><br><br><br><br><br><br><br>
     </div>
 
     <!-- footer -->
     <br><div id="footer" class="standard">
-        <p>©2023 Trevor Bollinger</p>
+        <p>©2024 Trevor Bollinger</p>
     </div>
 </body>
 </html>
