--- a/priorities.html
+++ b/priorities.html
@@ -24,7 +24,7 @@ fetch('cards.txt')
     var listItems = "";
 
     for (var i = 0; i < lines.length; i++) {
-        listItems += "<li>" + lines[i] + "</a></li>";
+        listItems += "<li><a href = "#">" + lines[i] + "</a></li>";
     }
 
     // Get the unordered list element by its id
