--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello!</title>
+    <title>Comfy Caj :)</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -16,32 +16,67 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<script>
+fetch('cards.txt')
+.then(response => response.text())
+.then(data => {
+    var lines = data.split(/\r?\n/);
+    var listItems = "";
+
+    for (var i = 0; i < lines.length; i++) {
+        listItems += "<li><a href='#'>" + lines[i] + "</a></li>";
+    }
+
+    // Get the unordered list element by its id
+    var ul = document.getElementById('myUL');
+
+    // Add the new list items to the existing unordered list
+    ul.innerHTML += listItems;
+})
+.catch(error => console.error('Error:', error));
+
+
+function myFunction() {
+  // Declare variables
+  var input, filter, ul, li, a, i, txtValue;
+  input = document.getElementById('myInput');
+  filter = input.value.toUpperCase();
+  ul = document.getElementById("myUL");
+  li = ul.getElementsByTagName('li');
+
+  // Loop through all list items, and hide those who don't match the search query
+  for (i = 0; i < li.length; i++) {
+    a = li[i].getElementsByTagName("a")[0];
+    txtValue = a.textContent || a.innerText;
+    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+      li[i].style.display = "";
+    } else {
+      li[i].style.display = "none";
+    }
+  }
+}
+</script>
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-darkt">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <nav class="navbar navbar-dark bg-dark">
-                <a class="navbar-brand" href="index.html">
-                    <img src="logo.png" width="28" height="28" alt="">
+                <a href="index.html" id="logo">
+                     <img src="logo.png" width="30" height="30" alt="">
                 </a>
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
             </nav>
         </div>
     </nav> <br> <!--end navbar-->
 
     <!-- body -->
     <div id="main" class="standard">
-        <h1>welcome to boli.dev</h1><br>
-        <br><br><br><br><br><br><br><br><br>
+     <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search..">
+         <ul id="myUL" class="navbar">
+        
+
+         </ul> 
+        <br>
     </div>
 
-    <!-- footer -->
-    <br><div id="footer" class="standard">
-        <p>©2024 Trevor Bollinger</p>
-    </div>
 </body>
 </html>
