--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ fetch('cards.txt')
 
     // Add the new list items to the existing unordered list
     ul.innerHTML += listItems;
+    console.log(list[4]);
 })
 .catch(error => console.error('Error:', error));
 
