--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button type="button" id="randButton" onclick="newCard()">Click Me!</button>
             <div id="checkbox"> 
                 <input class="messageCheckbox" type="checkbox" id="uniqueCheck">
-                <label for="uniqueCheck">Only New Cards</label>
+                <label for="uniqueCheck">Only Undrawn Cards</label>
             </div>
         </div>
     </div>
