--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="header">
 
         <div id="controlPanel">
-            <button type="button" id="randButton" onclick="newCard()">Click Me!</button>
+            <button type="button" id="randButton" onclick="newCard()">Draw Card</button>
             <div id="checkbox"> 
                 <input class="messageCheckbox" type="checkbox" id="uniqueCheck">
                 <label for="uniqueCheck">Only Undrawn Cards</label>
