--- a/index.html
+++ b/index.html
@@ -2,32 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Comfy Caj :)</title>
+    <title>stink.world</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap -->
     <script lang="javascript" src="dist/xlsx.core.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
-
-    <script
-              src="https://code.jquery.com/jquery-3.7.1.js"
-              integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-              crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="crossorigin="anonymous"></script>
 
     <script src="JavaScript/main.js"></script>
     <script src="JavaScript/func.js"></script>
-
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<script>
 
-</script>
 <body>
    
+   <!-- Control Panel -->
     <div id="header">
         <div id="controlPanel">
             <button type="button" id="randButton" onclick="newCard()">Draw Card</button>
@@ -38,15 +31,13 @@
         </div>
     </div>
 
-
+    <!-- Card Display -->
     <div id="display">
             <h3 id="textDisplay"></h3>
             <h5 id="letterDisplay"></h5>
-    </div>
+    </div>    
 
-    
-
-    <!-- body -->
+    <!-- List -->
     <div id="main" class="standard">
      <input type="text" id="myInput" onkeyup="searchList()" placeholder="Search..">
          <ul id="myUL" class="navbar">
