--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
 
 <body>
    
-   <!-- Control Panel -->
-    <div id="header">
-        <div id="controlPanel">
-            <button type="button" id="randButton" onclick="newCard()">Draw Card</button>
-            <div id="checkbox"> 
-                <input class="messageCheckbox" type="checkbox" id="uniqueCheck">
-                <label for="uniqueCheck">Allow Repeat Cards</label>
-            </div>
+    <!-- Control Panel -->
+    <div class="d-flex justify-content-center align-items-center my-3">
+        <button type="button" id="randButton" onclick="newCard()" class="btn btn-primary mr-2">Draw Card</button>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="uniqueCheck">
+            <label class="form-check-label" for="uniqueCheck">Allow Repeat Cards</label>
         </div>
     </div>
+
 
     <!-- Card Display -->
     <div id="display">
@@ -40,11 +39,8 @@
     <!-- List -->
     <div id="main" class="standard">
      <input type="text" id="myInput" onkeyup="searchList()" placeholder="Search..">
-         <ul id="myUL" class="navbar">
-
-         </ul> 
+         <ul id="myUL" class="navbar"></ul> 
         <br>
     </div>
-
 </body>
 </html>
