--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
     <script src="JavaScript/main.js"></script>
     <script src="JavaScript/func.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="register.css">
+    <link rel="stylesheet" type="text/css" href="style/register.css">
 </head>
 
 <script>
@@ -46,7 +46,7 @@ form.addEventListener('submit', e => {
         <h4>Register Card</h4>
         <h5>Please only register a card once it's physically in the deck</h5>
         <input type="text" name="text" placeholder="Card Text" required>
-        <input type="text" name="part" placeholder="Part of Speech" required>
+        <input type="text" name="part" placeholder="Part of Speech (optional)" required>
         <div class="checkbox-container">
             <input type="checkbox" name="stinky" value="x" id="stinky">
             <label for="stinky">Inside Joke</label>
