--- a/index.html
+++ b/index.html
@@ -13,21 +13,32 @@
     <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="crossorigin="anonymous"></script>
 
-    <script src="JavaScript/main.js"></script>
-    <script src="JavaScript/func.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 
 <body>
    
-    <!-- Control Panel -->
+ <!-- Control Panel -->
     <div class="d-flex justify-content-center align-items-center my-3">
+    <div class="hstack">
+        <button type="button" id="resetButton" onclick="resetCards()" class="btn btn-danger mr-2">Reset Cards</button>
         <button type="button" id="randButton" onclick="newCard()" class="btn btn-primary mr-2">Draw Card</button>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="uniqueCheck">
-            <label class="form-check-label" for="uniqueCheck">Allow Repeat Cards</label>
+        <div class="vstack">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="uniqueCheck" onclick="filterList()">
+                <label class="form-check-label" for="uniqueCheck">Allow Repeat Cards</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="stinkyCheck" onclick="filterList()">
+                <label class="form-check-label" for="stinkyCheck">Remove Stinky</label>
+            </div>
         </div>
+
     </div>
+</div>
+
+
 
 
     <!-- Card Display -->
@@ -43,4 +54,8 @@
         <br>
     </div>
 </body>
+    <script src="JavaScript/func.js"></script>
+    <script src="JavaScript/loadcards.js"></script>
+        <script src="JavaScript/main.js"></script>
+
 </html>
