--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="stinkyCheck" onclick="filterList()">
-                <label class="form-check-label" for="stinkyCheck">Remove Stinky</label>
+                <label class="form-check-label" for="stinkyCheck">Remove Inside Jokes</label>
             </div>
         </div>
 
